[iOS] Crash logs can't be found on ios-simulator because WebKitTestRunner returns the wrong process name <http://webkit.org/b/142243>

Reviewed by Alexey Proskuryakov.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::webProcessName):
(WTR::TestController::networkProcessName):
- Return the same process name on iOS and Mac because they both
  use the same process name for local engineering builds.


Canonical link: https://commits.webkit.org/160301@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180983 268f45cc-cd09-0410-ab3c-d52691b4dbfc